add worker skeleton fastapi setup

--- a/src/worker/index.html
+++ b/src/worker/index.html
@@ -6,6 +6,9 @@
     <title>SST Worker</title>
 </head>
 <body>
-    <p>SST Worker</p>
+    SST Worker: this worker provides endpoints for
+    <ul>
+    <li>Pulling from SFTP</li>
+</ul>
 </body>
 </html>
